# paper-search

./: .dockerignore  .env.example  .gitignore  .lesswrong-cookie  .pre-commit-config.yaml  README.md  docker-compose.yml  impl-plan.md  pyproject.toml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  llm_config.toml  pyproject.toml  scratch_openrouter_stream.py
backend/alembic/: env.py
backend/app/: config.py  main.py  worker.py
backend/app/api/: data_sources.py  dev.py  documents.py  feedback.py  filters.py  http_errors.py  jobs.py  onboarding.py  papers.py  scholar.py  search.py  settings.py
backend/app/api/schemas/: job.py
backend/app/core/: config.py
backend/app/db/: schema.py  session.py
backend/app/jobs/: daily_search.py  daily_search_summary.py  dispatcher.py  documents.py  feedback_reflection.py  idea_map.py  onboarding.py  paper_notes_filter_gen.py  queue.py  queues.py  scholar_import.py
backend/app/llm/: client.py  config.py  partial_json.py  prompts.py  schemas.py  summary_stream.py
backend/app/models/: __init__.py  app_setting.py  base.py  data_source.py  document.py  feedback.py  filter.py  idea_map.py  job.py  onboarding_extraction.py  paper.py  paper_html.py  paper_match.py  paper_match_feedback.py  paper_note.py  research_profile_import.py  search_run.py  search_run_paper.py  source_daily.py
backend/app/schemas/: daily_search.py  data_sources.py  documents.py  feedback.py  filters.py  jobs.py  onboarding.py  papers.py  search.py
backend/app/services/: arxiv.py  arxiv_provider.py  daily_dates.py  daily_index_store.py  documents.py  errors.py  feedback.py  filters.py  html_parser.py  index_records.py  index_sync.py  job_enqueue.py  job_views.py  jobs.py  jobs_overview.py  lesswrong.py  lesswrong_provider.py  local_arxiv_cache.py  mock_papers.py  onboarding.py  paper_html_source.py  papers.py  papers_fts.py  public_arxiv_cache.py  public_lesswrong_cache.py  public_r2_index.py  r2_index_fetch.py  scholar.py  search_runs.py  semantic_scholar.py  settings.py  source_provider_base.py  source_providers.py  source_settings.py  source_types.py  sources.py
backend/app/utils/: cursor.py  html_parser.py
backend/tests/: conftest.py  test_api.py  test_daily_index.py  test_database.py  test_dispatcher.py  test_index_sync.py  test_job_queues.py  test_papers_fts.py  test_partial_json.py  test_search_runs_summary.py  test_services_enqueue.py  test_services_filters.py  test_services_papers.py  test_smoke_llm.py  test_source_providers.py  test_sources.py  test_summary_stream.py  test_unit.py  test_workers.py
core/: pyproject.toml
core/src/paper_search_core/: __init__.py  daily_dates.py  index_records.py  r2_urls.py
core/src/paper_search_core/models/: __init__.py  paper.py
core/src/paper_search_core/schemas/: __init__.py  (+1 more)
core/tests/: test_daily_search_summary_format.py  test_index_records.py
scripts/: arxiv_html_metadata.py  arxiv_index.py  arxiv_metadata.py  check_lesswrong_rate_limits.py  dev-clear-jobs  dev-flush-redis  dev-interrupt-worker  dev-reset  dev-worker-logs  dev_jobs.py  enrich_arxiv_r2_index.py  ingest_arxiv.py  ingest_lesswrong.py  migrate_arxiv_r2_index.py  pyproject.toml  r2.py  r2_arxiv_html.py  r2_index.py  r2_lesswrong_html.py  scrape_arxiv_html.py  scrape_lesswrong_html.py  sync.py  sync_public_index.py  upload_arxiv_r2_index.py  upload_lesswrong_r2_index.py
scripts/src/paper_search_scripts/: __init__.py  cli.py  config.py  index_loader.py  r2_fetch.py  sync.py
scripts/tests/: test_index_loader.py
(+51 files in other folders)
