[project]
name = "paper-search-backend"
version = "0.1.0"
description = "Paper search backend API"
requires-python = ">=3.11"
dependencies = [
    "paper-search-core",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "httpx>=0.27.0",
    "openai>=2.37.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "tqdm>=4.66.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
paper-search-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
