[project]
name = "paper-search-core"
version = "0.1.0"
description = "Shared SQLAlchemy models and index record mapping for paper-search"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_search_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
