[project]
name = "paper-search-scripts"
version = "0.1.0"
description = "CLI scripts for paper-search (sync and ingest)"
requires-python = ">=3.11"
dependencies = [
    "paper-search-core",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.66.0",
]

[tool.uv]
package = false

[tool.uv.sources]
paper-search-core = { workspace = true }
